# bazel-watcher

./: .bazel_fix_commands.json  .bazelrc  .cirrus-bazelrc  .cirrus.yml  .gitignore  .npmrc  .pre-commit-config.yaml  .test-bazelrc  .travis.yml  BUILD  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  CONTRIBUTORS  MODULE.bazel  README.md  RunfilesServer.java  WORKSPACE  example.profile.json  go.mod  go.sum  index.js  os.bzl  package.json  release.sh  renovate.json  repositories.bzl  setup.bzl  skylint.sh
.bazelci/: presubmit.yml
.ci/: bazel-watcher.json
.github/: renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yaml  release.yaml  stale.yml
bazel/: BUILD  bazel.go  bazel_test.go  bazel_unix.go  bazel_windows.go
bazel/testing/: BUILD  mock.go
brs/: BUILD  EphemeralPort.go  EphemeralPort.java  IntegrationTestRunner.go  IntegrationTestRunner.java  RunfilesServer.go  RunfilesServer.java  main.go
cmd/ibazel/: BUILD.bazel  main.go  main_bsd.go  main_linux.go  main_test.go  main_unix.go  main_windows.go
e2e/: BUILD  common.go  ibazel.go  simple_test.go
e2e/abort_compilation_early/: BUILD  abort_compilation_early_test.go
e2e/bazel/: BUILD.bazel  README.md  bazel.go
e2e/error/: BUILD  error_test.go
e2e/example_client/: BUILD.bazel  example_client.go
e2e/lifecycle_hooks/: BUILD  lifecycle_hooks_test.go  lifecycle_hooks_unix_test.go  lifecycle_hooks_windows_test.go
e2e/live_reload/: BUILD  live_reload_test.go
e2e/live_reload/example_client/: BUILD  example_client.go
e2e/live_reload/selenium/: BUILD  live_reload.py  live_reload_test.go
e2e/live_reload/simulated_browser/: BUILD  simulated_browser_test.go
e2e/local_repository/: BUILD  local_repository_test.go
e2e/notify_changes/: BUILD  BUILD.bazel  notify_changes_test.go
e2e/output_runner/: BUILD  output_runner_test.go
e2e/override_repository/: BUILD  override_repository_test.go
e2e/profiler/: BUILD  profiler_test.go
e2e/simple/: BUILD  BUILD.bazel  main.go  simple_test.go
e2e/termination/: BUILD  termination_test.go
e2e/vim/: BUILD  vim.go
example_client/: BUILD  example_client.go
example_client/data/: BUILD  data.go
examples/: BUILD  setup.bzl  simple.html  simple.md
examples/tex/: katex.bzl  preamble.html
ibazel/: BUILD  fsnotfy.go  ibazel.go  ibazel_test.go  ibazel_unix.go  ibazel_windows.go  lifecycle.go  main.go  main_test.go  main_unix.go  querier.go  source_event_handler.go  watcher.go  workspace_finder.go
ibazel/command/: BUILD  command.go  command_test.go  default_command.go  default_command_test.go  notify_command.go  notify_command_test.go
ibazel/fswatcher/: BUILD  factory_darwin.go  factory_fsnotify.go  fswatcher.go
ibazel/fswatcher/common/: BUILD  common.go
ibazel/fswatcher/fsevents/: BUILD  fsevents.go
ibazel/fswatcher/fsnotify/: BUILD  fsnotify.go  fsnotify_test.go
ibazel/lifecycle_hooks/: BUILD  lifecycle_hooks.go
ibazel/live_reload/: BUILD  BUILD.bazel  events.go  server.go  server_test.go
ibazel/log/: BUILD.bazel  log.go  log_test.go
ibazel/output_runner/: BUILD  output_runner.go  output_runner_test.go
ibazel/process_group/: BUILD  process_group.go  process_group_unix.go  process_group_windows.go  syscalls_windows.go
ibazel/profiler/: BUILD  profiler.go
ibazel/query/: BUILD  query.go
ibazel/watch/: BUILD  fsnotify.go  source_event_handler.go
ibazel/workspace/: BUILD  workspace.go
ibazel/workspace_finder/: BUILD  workspace_finder.go
internal/bazel/: BUILD  README.md  bazel.go  bazel_test.go
internal/bazel/testing/: BUILD  mock.go
internal/e2e/: BUILD  buffer.go  common.go  ibazel.go
internal/e2e/error/: BUILD  error_test.go
internal/e2e/example_client/: BUILD.bazel  example_client.go
internal/e2e/incompatible_by_default/: BUILD  incompatible_by_default_test.go
internal/e2e/lifecycle_hooks/: BUILD  lifecycle_hooks_test.go
internal/e2e/live_reload/: BUILD  live_reload_test.go
internal/e2e/local_path_override/: BUILD  local_path_override_test.go
internal/e2e/local_repository/: BUILD  local_repository_test.go
internal/e2e/many_dirs/: BUILD  many_dirs_test.go
internal/e2e/nested_modules/: BUILD  nested_module_test.go
internal/e2e/notify/: BUILD  notify_test.go
internal/e2e/output_runner/: BUILD  output_runner_test.go
internal/e2e/override_repository/: BUILD  override_repository_test.go
internal/e2e/profiler/: BUILD  profiler_test.go
internal/e2e/simple/: BUILD  simple_test.go
internal/e2e/stream/: BUILD  stream_test.go
internal/e2e/symlink_dir/: BUILD.bazel  symlink_dir_test.go
internal/e2e/termination/: BUILD  termination_test.go
internal/e2e/vim/: BUILD  README.md  vim_test.go
internal/e2e/windows_shell_smoke/: BUILD.bazel  windows_shell_smoke_test.go
internal/ibazel/: BUILD  ibazel.go  ibazel_test.go  ibazel_unix.go  ibazel_windows.go  lifecycle.go
internal/ibazel/command/: BUILD  command.go  command_test.go  default_command.go  default_command_test.go  notify_command.go  notify_command_test.go
internal/ibazel/log/: BUILD.bazel  log.go  log_test.go
internal/utils/: BUILD.bazel  compatibility.go  compatibility_test.go
npm/: BUILD  generate_package.go  index.js  index.tpl.js  package.json  publish.sh
process_group/: BUILD  process_group.go  process_group_unix.go
release/: release.sh
release/github/: publish.sh
release/npm/: BUILD  generate_package.go  index.js  package.sh  publish.sh
rules/: integration_test.bzl  serve.bzl
runfiles_server/: BUILD  README.md  integration_test_runner.go  live_reload_snippet_injecting_handler.go  runfiles_server.go  serve.bzl
runfiles_server/examples/: BUILD  repositories.bzl  setup.bzl  simple.html  simple.js  simple.md  simple.tex
runfiles_server/integrationtest/: BUILD  bad.txt  expected_failure_test.bzl  fail.sh  genrule_test.sh  integration_test.bzl  integration_test_runner.go  path_traversal_test.sh  simple_test.sh
test/: BUILD  bad.txt  genrule_test.sh  path_traversal_test.sh  simple_test.sh
test/golang/: BUILD  golang_sanity_test.sh
tools/: bazel.rc  workplace_status.py  workplace_status.sh
(+28 files in other folders)
