module(
    name = "bazel_watcher",
    version = "0.1.0",
)

# Define direct Bazel dependencies
bazel_dep(name = "rules_proto", version = "6.0.0")
bazel_dep(name = "rules_go", version = "0.51.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.42.0")

# Configure Go dependencies using go.mod directly
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_fsnotify_fsevents",
    "com_github_fsnotify_fsnotify",
    "com_github_golang_protobuf",
    "com_github_google_go_cmp",
    "com_github_gorilla_websocket",
    "com_github_jaschaephraim_lrserver",
    "com_github_mattn_go_shellwords",
    "org_golang_x_sys",
)
