bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_go", version = "0.54.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.43.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

use_repo(
    go_deps,
    "com_github_fsnotify_fsevents",
    "com_github_fsnotify_fsnotify",
    "com_github_golang_protobuf",
    "com_github_google_go_cmp",
    "com_github_gorilla_websocket",
    "com_github_jaschaephraim_lrserver",
    "com_github_mattn_go_shellwords",
)
