module(name = "bazel_watcher")

bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_go", version = "0.57.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.45.0", repo_name = "bazel_gazelle")

# Configure Go SDK
go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.0")

# Configure dependencies from go.mod
go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_fsnotify_fsevents", "com_github_fsnotify_fsnotify", "com_github_golang_protobuf", "com_github_google_go_cmp", "com_github_gorilla_websocket", "com_github_jaschaephraim_lrserver", "com_github_mattn_go_shellwords", "org_golang_x_sys", "org_golang_x_tools")
