load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["bazel.go"],
    importpath = "github.com/bazelbuild/bazel-watcher/e2e/bazel",
    visibility = ["//visibility:private"],
    deps = [
        "//third_party/bazel/master/src/main/protobuf:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
    ],
)

go_binary(
    name = "bazel",
    importpath = "github.com/bazelbuild/bazel-watcher/e2e/bazel",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)
