load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["example_client.go"],
    data = ["//example_client:files"],
    importpath = "github.com/bazelbuild/bazel-watcher/e2e/example_client",
    visibility = ["//visibility:public"],
    deps = [
        "//e2e:go_default_library",
        "//example_client/data:go_default_library",
        "@io_bazel_rules_go//go/tools/bazel:go_default_library",
        "@io_bazel_rules_go//go/tools/bazel_testing:go_default_library",
    ],
)
