load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/bazelbuild/bazel-watcher/e2e/simple",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "sample",
    importpath = "github.com/bazelbuild/bazel-watcher/e2e/sample",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "simple",
    importpath = "github.com/bazelbuild/bazel-watcher/e2e/simple",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)
