load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "log",
    srcs = ["log.go"],
    importpath = "github.com/bazelbuild/bazel-watcher/internal/ibazel/log",
    visibility = ["//visibility:public"],
)

go_test(
    name = "log_test",
    srcs = ["log_test.go"],
    embed = [":log"],
    deps = ["@com_github_google_go_cmp//cmp"],
)
